refactor zoom handling in AtlasClientState; replace zoomIn and zoomOut methods with clamp logic